[gd_scene load_steps=41 format=2]

[ext_resource path="res://UI/Layers/LayerBar.gd" type="Script" id=1]
[ext_resource path="res://UI/Layers/Layer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/font_big_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/font_normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Icons/new_layer.png" type="Texture" id=5]
[ext_resource path="res://UI/Components/FlatTextureButton.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/trash.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/down_arrow.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/up_arrow.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.339203, 0.345581, 0.371094, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.341176, 0.431373, 0.694118, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.313726, 0.443137, 0.827451, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.309804, 0.32549, 0.368627, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.262745, 0.403922, 0.823529, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=6]
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxTexture" id=7]
region_rect = Rect2( 0, 0, 12, 12 )
margin_left = 6.0
margin_right = 6.0
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxTexture" id=8]
region_rect = Rect2( 0, 0, 12, 12 )
margin_left = 6.0
margin_right = 6.0
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxTexture" id=9]
region_rect = Rect2( 0, 0, 12, 12 )
margin_left = 4.0
margin_right = 4.0
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxLine" id=10]
color = Color( 0.2821, 0.28768, 0.31, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.572549, 1, 0.894118, 1 )

[sub_resource type="StyleBoxLine" id=12]
color = Color( 0.12549, 0.129412, 0.141176, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 5

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.12549, 0.129412, 0.141176, 1 )

[sub_resource type="StyleBoxEmpty" id=14]
content_margin_left = 2.0
content_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color( 0.156863, 0.160784, 0.176471, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.12549, 0.129412, 0.141176, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.12549, 0.129412, 0.141176, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=19]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )
border_color = Color( 0.125, 0.14375, 0.19375, 1 )

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.12549, 0.129412, 0.141176, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.313726, 0.32549, 0.356863, 1 )
shadow_color = Color( 0, 0, 0, 0.3 )
shadow_size = 4

[sub_resource type="StyleBoxLine" id=21]
color = Color( 1, 1, 1, 0.1 )
grow_begin = 7.0
grow_end = 7.0

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=24]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 1.0
bg_color = Color( 0.12549, 0.129412, 0.141176, 0.317647 )

[sub_resource type="StyleBoxFlat" id=25]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 1.0
bg_color = Color( 0.12549, 0.129412, 0.141176, 1 )

[sub_resource type="StyleBoxFlat" id=26]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.12549, 0.129412, 0.141176, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color( 0, 0, 0, 0.317647 )
shadow_size = 4

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.12549, 0.129412, 0.141176, 1 )

[sub_resource type="StyleBoxFlat" id=28]
draw_center = false
border_width_bottom = 12
border_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=29]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 0.2 )

[sub_resource type="StyleBoxFlat" id=30]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )
border_width_left = 1
border_width_top = 24
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.329412, 0.329412, 0.329412, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_top = 24.0
shadow_color = Color( 0, 0, 0, 0.156863 )
shadow_size = 2

[sub_resource type="Theme" id=31]
default_font = ExtResource( 4 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 4 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
CheckButton/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
CheckButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckButton/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
CheckButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = ExtResource( 4 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPicker/constants/h_width = 30
ColorPicker/constants/label_width = 10
ColorPicker/constants/margin = 4
ColorPicker/constants/sv_height = 256
ColorPicker/constants/sv_width = 256
ColorPicker/icons/add_preset = null
ColorPicker/icons/color_hue = null
ColorPicker/icons/color_sample = null
ColorPicker/icons/overbright_indicator = null
ColorPicker/icons/preset_bg = null
ColorPicker/icons/screen_picker = null
ColorPickerButton/colors/font_color = Color( 1, 1, 1, 1 )
ColorPickerButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.3 )
ColorPickerButton/colors/font_color_hover = Color( 1, 1, 1, 1 )
ColorPickerButton/colors/font_color_pressed = Color( 0.8, 0.8, 0.8, 1 )
ColorPickerButton/constants/hseparation = 2
ColorPickerButton/fonts/font = ExtResource( 4 )
ColorPickerButton/icons/bg = null
ColorPickerButton/styles/disabled = SubResource( 6 )
ColorPickerButton/styles/focus = SubResource( 6 )
ColorPickerButton/styles/hover = SubResource( 6 )
ColorPickerButton/styles/normal = SubResource( 6 )
ColorPickerButton/styles/pressed = SubResource( 6 )
HScrollBar/styles/grabber = SubResource( 7 )
HScrollBar/styles/grabber_highlight = SubResource( 7 )
HScrollBar/styles/grabber_pressed = SubResource( 8 )
HScrollBar/styles/scroll = SubResource( 9 )
HSeparator/constants/separation = 4
HSeparator/styles/separator = SubResource( 10 )
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 11 )
HSlider/styles/grabber_area_highlight = SubResource( 11 )
HSlider/styles/slider = SubResource( 12 )
ItemList/colors/font_color = Color( 1, 1, 1, 1 )
ItemList/colors/font_color_selected = Color( 1, 1, 1, 1 )
ItemList/colors/guide_color = Color( 0, 0, 0, 0.1 )
ItemList/constants/hseparation = 4
ItemList/constants/icon_margin = 4
ItemList/constants/line_separation = 2
ItemList/constants/vseparation = 2
ItemList/fonts/font = ExtResource( 4 )
ItemList/styles/bg = SubResource( 13 )
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 4 )
Label/styles/normal = SubResource( 14 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = ExtResource( 4 )
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 15 )
LineEdit/styles/normal = SubResource( 16 )
LineEdit/styles/read_only = null
Panel/styles/panel = SubResource( 17 )
PanelContainer/styles/panel = SubResource( 18 )
PopupMenu/colors/font_color = Color( 1, 1, 1, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_separator = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource( 4 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 19 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 20 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = SubResource( 21 )
ScrollContainer/styles/bg = SubResource( 22 )
TabContainer/colors/font_color_bg = Color( 0.780392, 0.780392, 0.780392, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 1, 1, 1, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = ExtResource( 4 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 23 )
TabContainer/styles/tab_bg = SubResource( 24 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 25 )
TooltipPanel/styles/panel = SubResource( 26 )
Tree/colors/custom_button_font_highlight = Color( 0.94, 0.94, 0.94, 1 )
Tree/colors/drop_position_color = Color( 1, 0.3, 0.2, 1 )
Tree/colors/font_color = Color( 1, 1, 1, 1 )
Tree/colors/font_color_selected = Color( 1, 1, 1, 1 )
Tree/colors/guide_color = Color( 0, 0, 0, 0.1 )
Tree/colors/relationship_line_color = Color( 0.27, 0.27, 0.27, 1 )
Tree/colors/title_button_color = Color( 0.88, 0.88, 0.88, 1 )
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = ExtResource( 4 )
Tree/fonts/title_button_font = ExtResource( 4 )
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = null
Tree/icons/select_arrow = null
Tree/icons/unchecked = null
Tree/icons/updown = null
Tree/styles/bg = SubResource( 27 )
Tree/styles/bg_focus = SubResource( 28 )
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = SubResource( 29 )
Tree/styles/selected_focus = SubResource( 29 )
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
WindowDialog/colors/title_color = Color( 1, 1, 1, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = ExtResource( 3 )
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 30 )

[node name="LayerBar" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -260.0
margin_top = 78.0
margin_bottom = -25.0
theme = SubResource( 31 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 260.0
margin_bottom = 977.0

[node name="LayersVBox" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 260.0
margin_bottom = 943.0
size_flags_vertical = 3

[node name="Layer" parent="VBoxContainer2/LayersVBox" instance=ExtResource( 2 )]
margin_right = 260.0
margin_bottom = 40.0

[node name="Tools" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 947.0
margin_right = 260.0
margin_bottom = 977.0
rect_min_size = Vector2( 0, 30 )

[node name="AddLayer" type="TextureButton" parent="VBoxContainer2/Tools"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3
script = ExtResource( 6 )
hover_tint = Color( 0.690196, 0.984314, 1, 1 )
pressed_tint = Color( 0.0392157, 0.819608, 1, 1 )

[node name="DeleteLayer" type="TextureButton" parent="VBoxContainer2/Tools"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 3
script = ExtResource( 6 )
hover_tint = Color( 0.690196, 0.984314, 1, 1 )
pressed_tint = Color( 0.0392157, 0.819608, 1, 1 )

[node name="Container" type="Control" parent="VBoxContainer2/Tools"]
margin_left = 68.0
margin_right = 192.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="ShiftUp" type="TextureButton" parent="VBoxContainer2/Tools"]
margin_left = 196.0
margin_right = 226.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 3
script = ExtResource( 6 )
hover_tint = Color( 0.690196, 0.984314, 1, 1 )
pressed_tint = Color( 0.0392157, 0.819608, 1, 1 )

[node name="ShiftDown" type="TextureButton" parent="VBoxContainer2/Tools"]
margin_left = 230.0
margin_right = 260.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 3
script = ExtResource( 6 )
hover_tint = Color( 0.690196, 0.984314, 1, 1 )
pressed_tint = Color( 0.0392157, 0.819608, 1, 1 )

[connection signal="pressed" from="VBoxContainer2/Tools/AddLayer" to="." method="_on_AddLayer_pressed"]
[connection signal="pressed" from="VBoxContainer2/Tools/DeleteLayer" to="." method="_on_DeleteLayer_pressed"]
[connection signal="pressed" from="VBoxContainer2/Tools/ShiftUp" to="." method="_on_ShiftUp_pressed"]
[connection signal="pressed" from="VBoxContainer2/Tools/ShiftDown" to="." method="_on_ShiftDown_pressed"]
